# libspatialaudio

./: CMakeLists.txt  README.md  meson.build  meson.options
.github/workflows/: meson-multi-platform.yml
docs/: AmbisonicBinauralization.md  AmbisonicDecoding.md  AmbisonicEncoding.md  AmbisonicOptimisation.md  AmbisonicRotation.md  AmbisonicZoomer.md  AmbisonicsOverview.md  LoudspeakerBinauralization.md  ObjectPanning.md  RendererAmbisonics.md  RendererBinaural.md  RendererDirectSpeaker.md  RendererObject.md  RendererOverview.md
docs/latex/: libspatialaudio_Technical_Report.tex
include/: AdmConversions.h  AdmDirectSpeakerGainCalc.h  AdmMetadata.h  AdmRenderer.h  AllocentricExtent.h  AllocentricPannerGainCalc.h  AmbisonicAllRAD.h  AmbisonicBase.h  AmbisonicBinauralizer.h  AmbisonicCommons.h  AmbisonicDecoder.h  AmbisonicEncoder.h  AmbisonicEncoderDist.h  AmbisonicMicrophone.h  AmbisonicOptimFilters.h  AmbisonicProcessor.h  AmbisonicPsychoacousticFilters.h  AmbisonicRotator.h  AmbisonicShelfFilters.h  AmbisonicSource.h  AmbisonicSpeaker.h  AmbisonicTypesDefinesCommons.h  AmbisonicZoomer.h  BFormat.h  Coordinates.h  Decorrelate.h  Decorrelator.h  GainCalculator.h  GainInterp.h  LoudspeakerLayoutHulls.h  LoudspeakerLayouts.h  ObjectPanner.h  PointSourcePannerGainCalc.h  PolarExtent.h  RegionHandlers.h  Renderer.h  RendererMetadata.h  Screen.h  ScreenCommon.h  SpeakersBinauralizer.h  (+3 more)
include/adm/: AllocentricExtent.h  AllocentricPannerGainCalc.h  CartesianLoudspeakerLayouts.h  Conversions.h  DirectSpeakerGainCalc.h  GainCalculator.h  MappingRules.h  PolarExtent.h
include/dsp/: IIRFilter.h  LinkwitzRileyIIR.h
include/hrtf/: hrtf.h  mit_hrtf.h  sofa_hrtf.h
source/: AdmDirectSpeakerGainCalc.cpp  AdmRenderer.cpp  AllocentricExtent.cpp  AllocentricPannerGainCalc.cpp  AmbisonicAllRAD.cpp  AmbisonicBase.cpp  AmbisonicBinauralizer.cpp  AmbisonicCommons.cpp  AmbisonicDecoder.cpp  AmbisonicEncoder.cpp  AmbisonicEncoderDist.cpp  AmbisonicMicrophone.cpp  AmbisonicOptimFilters.cpp  AmbisonicProcessor.cpp  AmbisonicRotator.cpp  AmbisonicShelfFilters.cpp  AmbisonicSource.cpp  AmbisonicSpeaker.cpp  AmbisonicZoomer.cpp  BFormat.cpp  Decorrelate.cpp  Decorrelator.cpp  GainCalculator.cpp  GainInterp.cpp  LoudspeakerLayouts.cpp  ObjectPanner.cpp  PointSourcePannerGainCalc.cpp  PolarExtent.cpp  RegionHandlers.cpp  Renderer.cpp  Screen.cpp  SpeakersBinauralizer.cpp  meson.build
source/adm/: AllocentricExtent.cpp  AllocentricPannerGainCalc.cpp  DirectSpeakerGainCalc.cpp  GainCalculator.cpp  PolarExtent.cpp
source/dsp/: IIRFilter.cpp  LinkwitzRileyIIR.cpp
source/hrtf/: mit_hrtf.cpp  sofa_hrtf.cpp
