# Library files
spatialaudio_sources = files(
    'AmbisonicEncoder.cpp',
    'AmbisonicMicrophone.cpp',
    'AmbisonicCommons.cpp',
    'mit_hrtf_lib.c',
    'AmbisonicProcessor.cpp',
    'AmbisonicRotator.cpp',
    'AmbisonicDecoder.cpp',
    'AmbisonicBinauralizer.cpp',
    'AmbisonicSource.cpp',
    'AmbisonicShelfFilters.cpp',
    'AmbisonicOptimFilters.cpp',
    'hrtf/mit_hrtf.cpp',
    'hrtf/sofa_hrtf.cpp',
    'BFormat.cpp',
    'SpeakersBinauralizer.cpp',
    'kiss_fft/kiss_fftr.c',
    'kiss_fft/kiss_fft.c',
    'AmbisonicAllRAD.cpp',
    'AmbisonicBase.cpp',
    'AmbisonicSpeaker.cpp',
    'AmbisonicEncoderDist.cpp',
    'AmbisonicZoomer.cpp',
    'Decorrelate.cpp',
    'AdmDirectSpeakerGainCalc.cpp',
    'AdmRenderer.cpp',
    'AllocentricPannerGainCalc.cpp',
    'AllocentricExtent.cpp',
    'Decorrelate.cpp',
    'GainCalculator.cpp',
    'GainInterp.cpp',
    'PointSourcePannerGainCalc.cpp',
    'PolarExtent.cpp',
    'RegionHandlers.cpp',
    'Screen.cpp',
    'dsp/IIRFilter.cpp',
    'dsp/LinkwitzRileyIIR.cpp',
)

spatialaudio_lib = library(
    'spatialaudio',
    spatialaudio_sources,
    install : true,
    dependencies : dependencies,
    include_directories : spatialaudio_incdirs_private,
    version : spatialaudio_lib_version,
)
